# job-scraper-pro

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/jobscraper/: __init__.py  cli.py  config.py  db.py  models.py  notify.py  runner.py  utils.py
src/jobscraper/scrapers/: base.py  glassdoor.py  indeed.py  linkedin.py
tests/: test_filter.py  test_hashing.py
