[project]
name = "job-scraper-pro"
version = "0.1.0"
description = "Reliable job scraper with filtering, dedupe, and email alerts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.32",
    "urllib3>=2.2",
    "html5lib>=1.1",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "Jinja2>=3.1",
    "schedule>=1.2",
    "email-validator>=2.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"
